# fediverse-stats

./: .gitignore  README.md  ng-list.txt  package-lock.json  package.json  pyproject.toml  tsconfig.json
notebook/: fediverse-stats.ipynb
src/: fetcher.ts  index.ts  json_extractor.ts  measurement.ts  types.ts  util.ts
