[tool.poetry]
name = "fediverse-stats"
version = "0.1.0"
description = ""
authors = ["Mizunashi Mana <contact@mizunashi.work>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11 <3.13"
jupyterlab = "^4.0.7"
pandas = "^2.1.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
